<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" 
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="2dp"
        android:background="@color/transparent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loginTitle"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/info" />
    </RelativeLayout>

        <LinearLayout android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_login_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/default_head" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/inputCellphone"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edt_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:drawableLeft="@drawable/passwd"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/inputPasswd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/selector_login_button"
                android:minHeight="45dp"
                android:onClick="onClick"
                android:text="@string/login"
                android:textColor="@color/white" />
            
            <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:onClick="onClick"
                android:id="@+id/btn_forget_passwd"
                android:text="@string/forget"
                android:textColor="@color/selector_btn_text"
				/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom" >

                <Button
                    android:onClick="onClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/transparent"
                    android:id="@+id/tyyx"
                	android:textColor="@color/white"
                	android:text="@string/tyyx"
                     />
                <Button
                    android:id="@+id/btn_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:background="@color/transparent"
                    android:text="@string/regist"
                    android:onClick="onClick"
                    android:textColor="@color/selector_btn_text" />
            </RelativeLayout>
        </LinearLayout>

</LinearLayout>