<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_right"
            android:onClick="onClick" />

        <TextView
            android:id="@id/title"
            style="@style/title_text"
            android:text="@string/moreInfo" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="onClick"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_half" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/goodat"
                 />

            <EditText
                android:id="@+id/edt_goodat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_half"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/white" />

            <TextView android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/achievement"
                 />

            <EditText
                android:id="@+id/edt_achievement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_half"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/white" />

            <TextView android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/selfIntruduce"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_selfIntroduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_half"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView  android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/serverMore"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>