<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_right"
            android:onClick="onClick" />

        <TextView
            android:id="@id/title"
            style="@style/title_text"
            android:text="@string/myacount" />

        <!--
             <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="完成"
            android:onClick="onClick"
            android:textColor="@color/white"
            android:id="@+id/btn_commit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/> -->
    </RelativeLayout>
	<TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/white_half"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="头像"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
				<LinearLayout android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:gravity="right|center_vertical">
                <ImageButton
                    android:id="@+id/headImageBtn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@null"
                    android:src="@drawable/default2"
                    android:onClick="onClick"
                    android:scaleType="fitXY"
                    android:contentDescription="@null" />
                <TextView android:background="@drawable/right"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_name"
                   	style="@style/text_value"/>
            </LinearLayout>
                        
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="医师号"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_doctorId"
                    style="@style/text_value"/>
            </LinearLayout>
			
             <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
   
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="收货地址"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txt_address"
                   	style="@style/text_value"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
            <Button android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:background="@drawable/selector_btn"
        		android:paddingLeft="20dp"
        		android:paddingRight="20dp"
        		android:paddingTop="10dp"
        		android:paddingBottom="10dp"
        		android:textColor="@color/white"
        		android:onClick="onClick"
        		android:id="@+id/btn_worktime"
        		android:gravity="left|center_vertical"
        		android:drawableRight="@drawable/right"
        		android:text="接诊时间"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/baseInfo"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:minHeight="10dp"
                    android:text="@string/edit"
                    android:onClick="onClick"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            
            
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:background="@color/white_half"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_department"
                    style="@style/text_value" />
            </LinearLayout>
			
        	<TextView android:layout_width="match_parent"
            	android:layout_height="1dp"
            	android:background="@color/gray_background"/>
        	
        	<LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/text_value"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/white_half"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_hospital"
                    style="@style/text_value"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/moreInfo"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:minHeight="10dp"
                    android:text="@string/edit"
                    android:onClick="onClick"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
            
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/white_half"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goodat"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_goodat"
                    style="@style/text_value" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
          
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/achievement"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_achievement"
                    style="@style/text_value" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
          
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@color/white_half"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selfIntruduce"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_background"
                    style="@style/text_value" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/white_half"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/serverMore"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <CheckBox android:checked="true"
                    android:id="@+id/cb_agree"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>               
        </LinearLayout>
    </ScrollView>

</LinearLayout>